[package]
name = "rkbuild"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
crossterm = "0.27.0"
curl = "0.4.44"
futures = "0.3.28"
libc = "0.2.147"
ratatui = { version = "0.22.0", features = ["all-widgets"] }
